[gd_scene format=3 uid="uid://bv1sdljys1xc2"]

[ext_resource type="Script" uid="uid://bffhebqydj71b" path="res://shop_keeper.gd" id="1_oqpvu"]
[ext_resource type="Texture2D" uid="uid://b3mdflciluxbd" path="res://ShopKeeperSprite.png" id="2_782h8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2guc"]
size = Vector2(52, 78)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_oqpvu"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_782h8"]

[node name="shop_keeper" type="Node2D" unique_id=1400398174]
script = ExtResource("1_oqpvu")

[node name="ShopKeeperSprite" type="Sprite2D" parent="." unique_id=1030462408]
position = Vector2(-2, -15)
texture = ExtResource("2_782h8")

[node name="Area2D" type="Area2D" parent="." unique_id=136220500]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=854739735]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_j2guc")
debug_color = Color(0.39164484, 0.602905, 0.26522747, 0.41960785)

[node name="UI" type="Control" parent="." unique_id=619200636]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI" unique_id=1403011663]
layout_mode = 0
offset_left = -170.0
offset_top = -274.0
offset_right = -143.56528
offset_bottom = -190.55624
scale = Vector2(4.7664576, 1.9054751)

[node name="Option1" type="Control" parent="UI/VBoxContainer" unique_id=1463379662]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/VBoxContainer/Option1" unique_id=2106507763]
position = Vector2(13.249712, 13.644899)
scale = Vector2(24.691631, 22.016949)
texture = SubResource("PlaceholderTexture2D_oqpvu")

[node name="Button1" type="Button" parent="UI/VBoxContainer/Option1" unique_id=1492573172]
layout_mode = 0
offset_left = 2.3077936
offset_top = 8.921668
offset_right = 14.895759
offset_bottom = 16.921669

[node name="Sprite2D2" type="Sprite2D" parent="UI/VBoxContainer/Option1" unique_id=1775259797]
modulate = Color(0, 0, 0, 1)
position = Vector2(20.055944, 13.628803)
scale = Vector2(10.320376, 20.410347)
texture = SubResource("PlaceholderTexture2D_782h8")

[node name="Option2" type="Control" parent="UI/VBoxContainer" unique_id=1156453915]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/VBoxContainer/Option2" unique_id=359294401]
position = Vector2(13.249712, 36.922287)
scale = Vector2(24.691631, 22.016949)
texture = SubResource("PlaceholderTexture2D_oqpvu")

[node name="Button2" type="Button" parent="UI/VBoxContainer/Option2" unique_id=1724550102]
layout_mode = 0
offset_left = 2.3077936
offset_top = 32.199055
offset_right = 14.895759
offset_bottom = 40.199055

[node name="Sprite2D2" type="Sprite2D" parent="UI/VBoxContainer/Option2" unique_id=566029648]
modulate = Color(0, 0, 0, 1)
position = Vector2(20.055944, 36.90619)
scale = Vector2(10.320376, 20.410347)
texture = SubResource("PlaceholderTexture2D_782h8")

[node name="Option3" type="Control" parent="UI/VBoxContainer" unique_id=732555387]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/VBoxContainer/Option3" unique_id=2018779394]
position = Vector2(13.249712, 60.21206)
scale = Vector2(24.691631, 22.016949)
texture = SubResource("PlaceholderTexture2D_oqpvu")

[node name="Button3" type="Button" parent="UI/VBoxContainer/Option3" unique_id=2107926720]
layout_mode = 0
offset_left = 2.3077936
offset_top = 55.48883
offset_right = 14.895759
offset_bottom = 63.48883

[node name="Sprite2D2" type="Sprite2D" parent="UI/VBoxContainer/Option3" unique_id=419577659]
modulate = Color(0, 0, 0, 1)
position = Vector2(20.055944, 60.19596)
scale = Vector2(10.320376, 20.410347)
texture = SubResource("PlaceholderTexture2D_782h8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="UI/VBoxContainer/Option1/Button1" to="." method="_on_button_1_pressed"]
